# Heat_Stroke_Predictor

3D_Design/: Drawing2.dwg  WP.FCStd  WP.html  WP.stl
App/: README.md  pubspec.yaml
App/android/app/: build.gradle.kts
App/android/app/src/main/: AndroidManifest.xml
App/android/app/src/main/kotlin/com/example/heat_stroke_predictor_app/: MainActivity.kt
App/ios/Runner/: Info.plist
App/ios/Runner.xcodeproj/: project.pbxproj
App/lib/: app.dart  main.dart
App/lib/ble/: ble_constants.dart  ble_device_manager.dart  ble_repository.dart
App/lib/models/: command_packet.dart  device_status.dart  enums.dart  live_packet.dart  risk_packet.dart  settings_packet.dart
App/lib/screens/: dashboard_screen.dart  scan_screen.dart  settings_screen.dart
App/lib/services/: packet_decoder.dart  telemetry_service.dart
App/lib/widgets/: connection_banner.dart  risk_card.dart  telemetry_card.dart
App/test/: widget_test.dart
App/web/: index.html  manifest.json
Heat_Stroke_Predictor/: CMakeLists.txt  README.md  ble_system.patch  py.py  sdkconfig.defaults.esp32c3  tempCodeRunnerFile.py
Heat_Stroke_Predictor/main/: CMakeLists.txt  Kconfig.projbuild  app_logic.c  app_logic.h  ble_manager.c  ble_manager.h  bme280.c  bme280.h  data_model.h  i2c_manager.c  i2c_manager.h  main.c  max30102.c  max30102.h  max30205.c  max30205.h  wearable_gatt.c  wearable_gatt.h
